# supergateway-rs

./: BENCHMARKS.md  CLAUDE.md  Cargo.toml  DIVERGENCES.md  PRD.md  README.md  ecosystem.config.example.js  rust-toolchain.toml
.beads/: issues.jsonl
benches/: codec.rs  gateway.rs
docs/: migration.md
spike/: FINDINGS.md  validate.rs
src/: child.rs  cli.rs  codec.rs  cors.rs  error.rs  health.rs  jsonrpc.rs  lib.rs  main.rs  oauth2.rs  observe.rs  serve.rs  session.rs  signal.rs
src/client/: http.rs  mod.rs  sse.rs
src/gateway/: http_to_stdio.rs  mod.rs  sse.rs  sse_to_stdio.rs  stateful_http.rs  stateless_http.rs  ws.rs
tests/: compat_harness.rs  mock_http_server.rs  mock_sse_server.rs  mock_stdio_server.rs
tests/compat/: helpers.rs  http_to_stdio.rs  main.rs  signal.rs  sse_to_stdio.rs  stdio_to_sse.rs  stdio_to_stateful_http.rs  stdio_to_stateless_http.rs  stdio_to_ws.rs
