[package]
name = "supergateway-rs"
version = "0.1.0"
edition = "2021"
description = "MCP transport bridge — stdio/SSE/WebSocket/Streamable HTTP"
autobenches = false
autotests = false

[dependencies]
anyhow = "1"
asupersync = { version = "=0.2.7", features = ["tls-webpki-roots"] }
clap = { version = "4", features = ["derive"] }
libc = "0.2"
nix = { version = "0.29", features = ["signal", "process"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
thiserror = "2"
sha2 = "0.10"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
asupersync = { version = "=0.2.7", features = ["test-internals", "tls-webpki-roots"] }
criterion = { version = "0.5", features = ["html_reports"] }
libc = "0.2"

[[test]]
name = "validate"
path = "spike/validate.rs"

[[test]]
name = "compat_harness"
path = "tests/compat_harness.rs"
harness = true

[[test]]
name = "compat"
path = "tests/compat/main.rs"
harness = true

[[bench]]
name = "codec"
harness = false

[[bench]]
name = "gateway"
harness = false

[[bin]]
name = "mock_stdio_server"
path = "tests/mock_stdio_server.rs"

[[bin]]
name = "mock_sse_server"
path = "tests/mock_sse_server.rs"

[[bin]]
name = "mock_http_server"
path = "tests/mock_http_server.rs"
